--- a/Docs/wireviz_uart_duet3.yaml
+++ b/Docs/wireviz_uart_duet3.yaml
@@ -1,10 +1,10 @@
 connectors:
-  Duet2:
+  Duet3:
     type: MOLEX KK 254
     subtype: female
-    pinlabels: [5V, GND, URXD0, UTXD0]
+    pinlabels: [5V, IO_0_OUT (TX), GND, IO_0_IN (RX), N/C (3.3V)]
     image:
-      src: duet2-uart1.png
+      src: duet3-uart1.png
     notes: "This is a polarised plug\nTX and RX are NOT 5V tolerant!\nCare Needed"
   PrintPY:
     type: 2.54mm PINSTRIP
@@ -27,11 +27,11 @@ cables:
 
 connections:
   -
-    - Duet2: [1,2,3,4]
+    - Duet3: [1,3,4,2]
     - Serial: [1,2,3,4]
     - PrintPY: [3,4,5,1]
   -
-    - Duet2: 2
+    - Duet3: 3
     - Serial: s
 
 options:
